--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,17 +23,17 @@ jobs:
       - name: "Install Dependencies"
         run: |
           python -m venv myenv
-          myenv\Scripts\activate
+          source myenv/bin/activate
           pip install -r requirements.txt
 
       - name: "Lint test"
         run: |
-          myenv\Scripts\activate
+          source myenv/bin/activate
           pylint app.py
 
       - name: "Run test"
         run: |
-          myenv\Scripts\activate
+          source myenv/bin/activate
           pytest
 
     
