--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           python -m venv myenv
           source myenv/bin/activate
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: "Lint test"
