--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,6 +42,12 @@ jobs:
           source myenv/bin/activate
           pytest -v
 
+      - name: "Upload product-ready build files"
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: build
+
     
     
 
